...
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/menuButton">

        <EditText
            android:id="@+id/input"
            style="@style/RobotoFontCondensedMedium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:autofillHints="false"
            android:background="#FFFFFF"
...
            android:textSize="55sp"
            tools:ignore="RtlCompat" />

    </HorizontalScrollView>

    <!-- <EditText
        android:id="@+id/resultDisplay"
        style="@style/RobotoFontCondensedMedium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollHorizontally="true"
        android:clickable="false"
        android:cursorVisible="false"
...
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/clearButton"
                        style="@style/CalculatorButton"
                        android:contentDescription="@string/clearDesc"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_clear_color"
...
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/oneButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/one"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/twoButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/two"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/threeButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/three"
                        android:textSize="28sp" />

                    <Button
                        android:id="@+id/addButton"
                        style="@style/CalculatorButton.Symbol"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_symbol_color"
                        android:onClick="addButton"
...
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <Button
                        android:id="@+id/zeroButton"
                        style="@style/CalculatorButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="keyDigitPadMappingToDisplay"
                        android:text="@string/zero"
...
                        android:layout_weight="1"
                        android:onClick="backspaceButton"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/backspace" />

                    <Button
                        android:id="@+id/equalsButton"
                        style="@style/CalculatorButton.Symbol"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="?attr/button_equals_color"
                        android:onClick="equalsButton"
...
